[tool.poetry]
name = "project2termdepositmarketing"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
plotly = "^5.13.0"
scikit-learn = "^1.2.1"
statsmodels = "^0.13.5"
shap = "^0.41.0"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
